--- a/css/style3.css
+++ b/css/style3.css
@@ -2,7 +2,7 @@
 /*  PÁGINA 3  */
 /* ********** */
 #pagina3{
-    background-image: url(/img/1.png);
+    background-image: url(../img/1.png);
     height: 700px;
     background-repeat: no-repeat;
     background-size: 1349px;
