--- a/css/style4.css
+++ b/css/style4.css
@@ -7,7 +7,7 @@
     background-size: 1500px;
     min-width: 1349px;
     max-width: 1349px;
-    background-image: url(/img/2.png);
+    background-image: url(../img/2.png);
 }
 
 #pagina4 figure img{
